# binance_historical_data

./: .gitignore  liq.py  main.py  pyproject.toml
binance_historical_data/: data_dumper.py
