[project]
name = "binance-historical-data"
version = "0.2.0"
description = ""
authors = [
    {name = "stanislav",email = "stas.prokoiev@gmail.com"}
]
license = {text = "\"MIT\""}
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "char (>=0.1.2,<0.2.0)",
    "mpire (>=2.10.2,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "certifi (>=2024.12.14,<2025.0.0)",
    "boto3 (>=1.36.3,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
